[gd_scene load_steps=7 format=3 uid="uid://dmhqwg5u48ief"]

[ext_resource type="Script" path="res://Scenes/fire_enemy.gd" id="1_t5vqi"]
[ext_resource type="Texture2D" uid="uid://vnr50o16gkfy" path="res://Sprites/fire_golem.png" id="2_o0nat"]
[ext_resource type="Script" path="res://Scenes/HurtBox.gd" id="6_7a5h8"]
[ext_resource type="PackedScene" uid="uid://c7bma6c20vrys" path="res://Scenes/UI/health_bar.tscn" id="7_vc3o4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2ge0"]
size = Vector2(28, 43)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f7sw8"]
radius = 7.0

[node name="FireEnemy" type="CharacterBody2D" node_paths=PackedStringArray("attack_timer", "enemy_health_bar")]
z_index = 2
collision_layer = 2
collision_mask = 0
script = ExtResource("1_t5vqi")
attack_distance = 250.0
attack_timer = NodePath("AttackTimer")
enemy_health_bar = NodePath("HealthBar")

[node name="ProjectileMarker2D" type="Marker2D" parent="."]
position = Vector2(27, -25)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -28)
texture = ExtResource("2_o0nat")
hframes = 12
vframes = 4

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("6_7a5h8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.500014, -10)
rotation = 1.57079
scale = Vector2(0.970117, 0.882503)
shape = SubResource("RectangleShape2D_f2ge0")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBox"]
position = Vector2(-3.55271e-15, 2)
scale = Vector2(1.11809, 0.86981)
polygon = PackedVector2Array(-13, -25, 14, -25, 0, -43)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f7sw8")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("7_vc3o4")]
offset_left = -38.0
offset_top = -71.0
offset_right = 39.0
offset_bottom = -66.0
max_value = 5.0
step = 1.0
value = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
